Fix text alignment in main body

--- a/style.css
+++ b/style.css
@@ -63,8 +63,8 @@ img {
    margin-bottom:       -1.55em;
 }
 
-p, h3, h4, ul {
-  padding:              1em 2.5em;
+p, ul {
+  padding:              1% 5%;
   margin:               0 20% 0 20%;
 }
 
@@ -109,6 +109,11 @@ h2 {
   color:                var(--background-white);
   background-color:     var(--nhs-blue);
   padding:              1em 20%;
+}
+
+h3, h4 {
+  padding:              1% 5%;
+  margin:               0 20% 0 20%;
 }
 
 
